@@ -407,8 +407,11 @@ sigmaTy   = UN "Exists"
 existsCon = UN "Ex_intro"
 
 piBind :: [(Name, PTerm)] -> PTerm -> PTerm
-piBind [] t = t
-piBind ((n, ty):ns) t = PPi expl n ty (piBind ns t)
+piBind = piBindp expl
+
+piBindp :: Plicity -> [(Name, PTerm)] -> PTerm -> PTerm
+piBindp p [] t = t
+piBindp p ((n, ty):ns) t = PPi p n ty (piBind ns t)
     
 tcname (UN ('@':_)) = True
 tcname (NS n _) = tcname n
@@ -455,16 +458,22 @@ expandParams dec ps ns tm = en tm
     en (PTactics ts) = PTactics (map (fmap en) ts)
 
     en (PQuote (Var n)) 
-        | n `elem` ns = PQuote (Var (dec n))
+        | n `nselem` ns = PQuote (Var (dec n))
     en (PApp fc (PRef fc' n) as)
-        | n `elem` ns = PApp fc (PRef fc' (dec n)) 
+        | n `nselem` ns = PApp fc (PRef fc' (dec n)) 
                            (map (pexp . (PRef fc)) (map fst ps) ++ (map (fmap en) as))
     en (PRef fc n)
-        | n `elem` ns = PApp fc (PRef fc (dec n)) 
+        | n `nselem` ns = PApp fc (PRef fc (dec n)) 
                            (map (pexp . (PRef fc)) (map fst ps))
     en (PApp fc f as) = PApp fc (en f) (map (fmap en) as)
     en (PCase fc c os) = PCase fc (en c) (map (pmap en) os)
     en t = t
+
+    nselem x [] = False
+    nselem x (y : xs) | nseq x y = True
+                      | otherwise = nselem x xs
+
+    nseq x y = nsroot x == nsroot y
 
 expandParamsD :: IState -> 
                  (Name -> Name) -> [(Name, PTerm)] -> [Name] -> PDecl -> PDecl
@@ -496,8 +505,35 @@ expandParamsD ist dec ps ns (PClauses fc opts n cs)
     updateps yn nm (((a, t), i):as)
         | (a `elem` nm) == yn = (a, t) : updateps yn nm as
         | otherwise = (MN i (show n ++ "_u"), t) : updateps yn nm as
-
+expandParamsD ist dec ps ns (PData syn fc pd) = PData syn fc (expandPData pd)
+  where
+    -- just do the type decl, leave constructors alone (parameters will be
+    -- added implicitly)
+    expandPData (PDatadecl n ty cons) 
+       = if n `elem` ns
+            then PDatadecl (dec n) (piBind ps (expandParams dec ps ns ty)) (map econ cons)
+            else PDatadecl n (expandParams dec ps ns ty) (map econ cons)
+    econ (n, t, fc) = (dec n, piBindp expl ps (expandParams dec ps ns t), fc)
+expandParamsD ist dec ps ns (PParams f params pds)
+   = PParams f (map (mapsnd (expandParams dec ps ns)) params) 
+               (map (expandParamsD ist dec ps ns) pds) 
+expandParamsD ist dec ps ns (PClass info f cs n params decls)
+   = PClass info f 
+           (map (expandParams dec ps ns) cs)
+           n
+           (map (mapsnd (expandParams dec ps ns)) params)
+           (map (expandParamsD ist dec ps ns) decls)
+expandParamsD ist dec ps ns (PInstance info f cs n params ty cn decls)
+   = PInstance info f 
+           (map (expandParams dec ps ns) cs)
+           n
+           (map (expandParams dec ps ns) params)
+           (expandParams dec ps ns ty)
+           cn
+           (map (expandParamsD ist dec ps ns) decls)
 expandParamsD ist dec ps ns d = d
+
+mapsnd f (x, t) = (x, f t)
 
 -- Calculate a priority for a type, for deciding elaboration order
 -- * if it's just a type variable or concrete type, do it early (0)
